# interlab

./: .gitignore  .readthedocs.yml  404.html  CITATION.cff  Doublecrux.ipynb  LICENSE  Makefile  README.md  borderlines.ipynb  borderlines.txt  cars.ipynb  cases_by_aoc.pkl  channel.ipynb  index.html  intro.ipynb  mkdocs.yml  modelstats.ipynb  package.json  pnpm-lock.yaml  pyproject.toml  requirements-colab.txt  requirements-full.txt  requirements.txt  rps.ipynb  sitemap.xml  storage.ipynb  tsconfig.json  versions.json  visualization.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  test.yaml
0.3.3/api/: index.html  interlab.html  search.js
0.3.3/assets/: logo1.xcf
0.3.4/: 404.html  sitemap.xml
0.3.5/: index.html
0.3.5/api/: index.html  interlab_zoo.html  search.js
0.3.5/installation/: index.html
0.3.5/overview/: index.html
0.3.5/search/: search_index.json
0.4.0/: index.html
0.4.0/api/: interlab.html
0.4.0/overview/: index.html
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/api/: index.html
0.4.1/examples/: index.html
0.4.1/installation/: index.html
0.4.1/overview/: index.html
0.4.1/search/: search_index.json
actors/basics/: index.html
actors/custom/: index.html
actors/webactor/: index.html
api/: index.html  interlab.html  interlab_zoo.html  search.js  treetrace.html
api/interlab/: __version__.html  actor.html  context.html  environment.html  lang_models.html  queries.html  ui.html  utils.html  version.html
apidoc/: index.html
assets/: logo2.xcf  logo3.xcf
browser/: build_for_python.sh  index.html  move_build.sh  package-lock.json  package.json  vite.config.ts
browser/browser/: package-lock.json  package.json
browser/public/: index.html
browser/src/: App.tsx  SingleContextView.tsx  config.ts  index.css  main.tsx
contexts/basics/: index.html
contexts/databrowser/: index.html
contexts/serialization/: index.html
contexts/storage/: index.html
docs/: apidoc.md  examples.md  index.html  index.md  installation.md  overview.md
docs/actors/: basics.md  custom.md  memory.md  webactor.md
docs/contexts/: basics.md  databrowser.md  serialization.md  storage.md
docs/environments/: basics.md  custom.md
docs/stylesheets/: extra.css
docs/tracing/: basics.md  databrowser.md  serialization.md  storage.md
environments/basics/: index.html
environments/custom/: index.html
examples/: index.html
experiments/jason/: adversarial_prompting.py  results_browser.py  set_storage.py
experiments/movies/: data.json  movies.py
installation/: index.html
interlab/: __init__.py
interlab-zoo/actors/: simple_cot_actor.py
interlab/actor/: __init__.py  affordance.py  affordances.py  base.py  event.py  llm_actor.py  one_shot_llm_actor.py  web_console_actor.py
interlab/actors/: __init__.py  actor.py  console_actor.py  event.py  format.py  llm_actors.py  memory.py
interlab/context/: __init__.py  __main__.py  console_srv.py  context.py  serialization.py  server.py  storage.py  storage_srv.py
interlab/environment/: __init__.py  base.py  commgame.py  monitor.py  negotiation.py  tree.py
interlab/ext/: graphviz.py  pyplot.py
interlab/interactions/: __init__.py  event.py
interlab/lang_models/: __init__.py  anthropic.py  base.py  count_tokens.py  openai.py  (+4 more)
interlab_zoo/: __init__.py
latest/: 404.html  index.html  sitemap.xml
notebooks/: borderlines.ipynb  car_negotiation.ipynb  car_negotiation_colab.ipynb  cars.ipynb  console.ipynb  contexts_intro.ipynb  intro.ipynb  lang_models.ipynb  mcts_car_negotiation-Copy1.ipynb  mcts_car_negotiation.ipynb  modelstats.ipynb  preferences.ipynb  storage.ipynb  summarizing_memory.ipynb  tracing_intro.ipynb  treetrace_intro.ipynb  treetrace_visualization.ipynb  visualization-Copy1.ipynb  visualization.ipynb
overview/: index.html
querychains/: __init__.py  __main__.py  actor.py  blob.py  channel.py  context.py  data.py  engines.py  llmactor.py  parsing.py  repeat.py  server.py  storage.py  text.py  utils.py
scripts/: check.sh  deploy_docs.sh  format.sh  gen_docs.sh  requirements.sh
search/: search_index.json
stable/: 404.html
tests/: conftest.py  test_actor.py  test_channel.py  test_colors.py  test_console.py  test_context.py  test_engine.py  test_fmtstring.py  test_format_str.py  test_import.py  test_json_parsing.py  test_json_querying.py  test_parsing.py  test_repeat.py  test_serialize.py  test_server.py  test_storage.py  test_text.py  test_version.py  test_zoo_import.py  testutils.py
tests_treetrace/: conftest.py  testutils.py
treetrace/: __init__.py
(+477 files in other folders)
