[tool.poetry]
authors = ["Tomas Gavenciak <gavento@gmail.com>"]
description = "A research framework for artificial agent interactions"
name = "interlab"
packages = [{include = "interlab"}, {include = "interlab_zoo"}]
readme = "README.md"
version = "0.2.0"

[tool.poetry.dependencies]
python = "^3.10"

addict = "^2.4.0"
anthropic = "^0.3.0"
backoff = "^2.2.1"
dirtyjson = "^1.0.8"
fastapi = "^0.95.2"
jsonref = "^1.1.0"
langchain = "^0.0.235"
matplotlib = "^3.7.1"
openai = "^0.27.4"
pyserde = "^0.10.5"
python-dotenv = "^1.0.0"
tornado = "6.3.1"
tqdm = "^4.65.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

# Removed:
# clearml
# spacy
# textstat

[tool.poetry.group.notebooks.dependencies]
# Packages for notebook development: Jupyter, Pandas
# Incompatible with google colab
ipykernel = "^6.24.0"
ipython = "^8.14.0"
jupyter = "^1.0"
jupyterlab = "^4.0"
notebook = "^7.0.0"
numpy = "^1.25.1"
pandas = "^2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21"
toml = "^0.10.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
