[tool.poetry]
authors = ["Tomas Gavenciak <gavento@acsresearch.org>", "Ada Böhm <ada@acsresearch.org"]
description = "A research framework for artificial agent interactions"
name = "interlab"
packages = [{include = "treetrace"}, {include = "interlab"}, {include = "interlab_zoo"}]
include = ["requirements*.txt", "docs/assets/logo3-cut.webp"]
readme = "README.md"
version = "0.4.1"

[tool.poetry.dependencies]
python = "^3.10"

addict = "^2.4.0"
anthropic = "^0.10.0"
cachetools = "^5.3.2"
dirtyjson = "^1.0.8"
fastapi = "^0.109.0"
jsonref = "^1.1.0"
langchain = "^0.1.1"
langchain-openai = "^0.0.3"
matplotlib = "^3.7.1"
openai = "^1.8.0"
python-dotenv = "^1.0.0"
tiktoken = "^0.5.2"
tqdm = "^4.65.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
pydantic = ">=1.9.0,<2.0.0"

[tool.poetry.group.notebooks.dependencies]
# Packages for notebook development: Jupyter, Pandas, etc.
# Note: these are incompatible with google colab
ipython = "^8.20.0"
ipykernel = "^6.29.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.11"
notebook = "^7.0.7"
numpy = "^1.26.3"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
mike = "^2.0.0"
mkdocs = "^1.5.3"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-material = "^9.5.4"
mkdocs-minify-plugin = "^0.7.1"
mkdocs-pdoc-plugin = { git = "https://github.com/spirali/mkdocs-pdoc-plugin.git", branch = "main" }
pdoc = "^14.4.0"
pytest = "^7.4.4"
setuptools = "^69.0.3"
toml = "^0.10.2"
pytest-asyncio = "^0.23.3"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
